build the Products Deatils Page

--- a/src/components/Loader.module.css
+++ b/src/components/Loader.module.css
@@ -1,6 +1,7 @@
 .loader {
     margin: auto;
     margin-top: 100px;
+    margin-left: 500px;
     /* width: 100%; */
     /* text-align: center; */
     height: 1000px;
